--- a/MVC_KUTUPHANE/MVC_KUTUPHANE/MVC_KUTUPHANE.csproj
+++ b/MVC_KUTUPHANE/MVC_KUTUPHANE/MVC_KUTUPHANE.csproj
@@ -241,6 +241,7 @@
     <Content Include="Views\Yazar\Getir.cshtml" />
     <Content Include="Views\Kitap\Index.cshtml" />
     <Content Include="Views\Kitap\Ekle.cshtml" />
+    <Content Include="Views\Kitap\Getir.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
